Removed small int cache. Shouldn´t be needed in current JVMs.